syntax = "proto3";

package relayrpc;
option go_package = "./pkg/relayrpc";


service RelayService {
  rpc RelayRPC(RelayRequest) returns (RelayResponse) {}
}

message RelayRequest {
  string Host = 1;
  string Command = 2;
}

message RelayResponse {
  bool ProcessedRequest = 1;
}